--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header .topnav a {
   text-decoration: none;
 }
 
+/* nesting */
 body {
   background: beige;
 }
@@ -34,6 +35,7 @@ body p {
   text-align: center;
 }
 
+/* nesting */
 .main {
   color: #008B8B;
 }
@@ -41,10 +43,15 @@ body p {
   padding-bottom: 80%;
 }
 
-h1, h2, h3, h4 {
+h1, h4, h2, h3 {
   text-align: center;
   color: #008B8B;
   font-variant: small-caps;
+}
+
+/* extend and Inheritance */
+h4 {
+  color: #6B88B5;
 }
 
 footer {
